force-app/main/default/objects/Automations_Snapshot__c/Automations_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Automations Snapshot</label>
    <nameField>
        <displayFormat>Snapshot-{0000}</displayFormat>
        <label>Automations Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automations Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>