force-app/main/default/objects/Automations_Snapshot__c/fields/Is_Shown__c.field-meta.xml
<CustomField>
    <fullName>Is_Shown__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Shown</label>
    <type>Checkbox</type>
</CustomField>