force-app/main/default/objects/Automations_Snapshot__c/fields/Query_Name__c.field-meta.xml
<CustomField>
    <fullName>Query_Name__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <label>Query Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>