force-app/main/default/objects/Automations_Snapshot__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>